Fix text color in dark mode

--- a/src/view/style.css
+++ b/src/view/style.css
@@ -16,7 +16,7 @@
     font-size: 11px;
 }
 .color-high{
-    color:#111;
+    color:#ccc;
 }
 .color-low{
     color: #666;
